--- a/index.html
+++ b/index.html
@@ -113,9 +113,10 @@
       <div id="submenu-title-materiale" class="submenu-title">
         <label for="models">Model 3D:</label>
         <select id="models">
-          <option value="fotoliu-procesat.glb" selected>Fotoliu procesat - 30k</option>
+          <option value="fotoliu-procesat.glb">Fotoliu procesat - 30k</option>
           <option value="fotoliu-original-100k.glb">Fotoliu original - 100k</option>
           <option value="fotoliu-original-1m.glb">Fotoliu original - 1M</option>
+          <option value="fotoliu-600k.glb" selected>Fotoliu nou - 600k</option>
         </select>
         <!-- <img src="public/arrow.png" alt="" class="back-arrow" id="back4"> -->
         <!-- <span class="back-text">Materiale</span> -->
